{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 186,
  "lineage": "fddf1574-1eb4-0316-c6c0-50b91608035f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:964965642335:loadbalancer/dev-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "dev-elb-929980867.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:5000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "dev-elb",
            "idle_timeout": 60,
            "instances": [
              "i-081ce1d595b9053fb",
              "i-0b32d91981b73788e"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 5000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "dev-elb",
            "security_groups": [
              "sg-0857f49806cca4b88"
            ],
            "source_security_group": "964965642335/dev_security_group_for_elb",
            "source_security_group_id": "sg-0857f49806cca4b88",
            "subnets": [
              "subnet-06e6c6c6ebd8a7475",
              "subnet-088f45d5f804cff91"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.front-end-network",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964965642335:internet-gateway/igw-05c321889b8e7b58e",
            "id": "igw-05c321889b8e7b58e",
            "owner_id": "964965642335",
            "tags": {
              "Name": "dev-internet-gateway"
            },
            "tags_all": {
              "Name": "dev-internet-gateway"
            },
            "vpc_id": "vpc-0fb9a69e1e5813ffa"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964965642335:security-group/sg-0a58cd50786a76b03",
            "description": "Allow SSH inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a58cd50786a76b03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_sg",
            "name_prefix": "",
            "owner_id": "964965642335",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb9a69e1e5813ffa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964965642335:security-group/sg-0857f49806cca4b88",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0857f49806cca4b88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev_security_group_for_elb",
            "name_prefix": "",
            "owner_id": "964965642335",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb9a69e1e5813ffa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964965642335:security-group/sg-04c3ea4b13982803e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04c3ea4b13982803e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0857f49806cca4b88"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "security_group_for_web_server",
            "name_prefix": "",
            "owner_id": "964965642335",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb9a69e1e5813ffa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "front-end-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964965642335:subnet/subnet-088f45d5f804cff91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-088f45d5f804cff91",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "964965642335",
            "tags": {
              "Name": "front-end-network_0"
            },
            "tags_all": {
              "Name": "front-end-network_0"
            },
            "vpc_id": "vpc-0fb9a69e1e5813ffa"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964965642335:subnet/subnet-06e6c6c6ebd8a7475",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-06e6c6c6ebd8a7475",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "964965642335",
            "tags": {
              "Name": "front-end-network_1"
            },
            "tags_all": {
              "Name": "front-end-network_1"
            },
            "vpc_id": "vpc-0fb9a69e1e5813ffa"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964965642335:vpc/vpc-0fb9a69e1e5813ffa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/20",
            "default_network_acl_id": "acl-08e0e4a1999195546",
            "default_route_table_id": "rtb-099812b1a0cf46f93",
            "default_security_group_id": "sg-05f4f07b697f17156",
            "dhcp_options_id": "dopt-888863f2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fb9a69e1e5813ffa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-099812b1a0cf46f93",
            "owner_id": "964965642335",
            "tags": {
              "name": "dev-vpc-main"
            },
            "tags_all": {
              "name": "dev-vpc-main"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}